# plotive-py

./: .gitignore  .readthedocs.yaml  LICENSE  README.rst  bench.py  generate_gallery.sh  pyproject.toml  requirements-dev.txt
.github/workflows/: CI.yml
docs/: api_ref.rst  conf.py  gallery.rst  index.rst  plotive.rst  tuto.rst
docs/code/: tuto_rlc_1.py  tuto_rlc_2.py  tuto_rlc_3.py  tuto_rlc_4.py
examples/: _common.py  bode_rlc.py  primes.py  sine.py
rust/: Cargo.toml
rust/src/: lib.rs  py_annot.rs  py_data.rs  py_des.rs  py_style.rs
src/plotive/: __init__.py  annot.py  axis.py  color.py  series.py  style.py
