[build-system]
requires = ["maturin>=1.11,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "plotive._rs"

[project]
name = "plotive"
description = "a data plotting library"
readme = "README.rst"
license = "MIT"
keywords = ["plot", "science", "chart", "data", "visualization"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
