[package]
name = "plotive-py"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "plotive"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.27.1"
pyo3 = "0.27.1"
plotive = { path = "../../plotive", features = [
    "data-csv",
    "noto-mono",
    "noto-sans",
    "noto-sans-italic",
    "noto-serif",
    "noto-serif-italic",
    "time",
] }
plotive-iced = { path = "../../plotive/iced", features = ["clipboard", "data-csv"] }
plotive-text = { path = "../../plotive/text" }
plotive-pxl = { path = "../../plotive/pxl" }
plotive-svg = { path = "../../plotive/svg" }
